# perturb_processing

./: .gitignore  LICENSE  README.md  config.ini  main.py  pyproject.toml
R/: DTU_analysis.R  deseq2.R  enrichment_split_run.R  merge_salmon_de.R  normalized_counts.R  prepare_go_inf.R  process.R  regenerate_enrich_res.R  similarity.R
adapters/: PE.fa
db/: models.py  utils.py
src/: download.py  generate_database.py  rmats.py  salmon.py  spliceTools.py  star.py  trimmomatic.py
