[tool.poetry]
name = "perturb"
version = "0.1.0"
description = ""
authors = ["ygidtu <ygidtu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.16.2"
pandas = "^2.0.3"
tqdm = "^4.65.0"
loguru = "^0.7.0"
fire = "^0.5.0"
requests = "^2.31.0"
psutil = "^5.9.5"
psycopg2-binary = "^2.9.6"
pysam = "^0.22.0"
seaborn = "^0.13.2"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
